--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              info@singleoriginspodcast.com
 description:        A show about visionaries who became entrepeneurs.
 author:             Single Origins
 baseurl:            
-url:                singleoriginspodcast.com
+url:                
 
 # Social Profiles
 twitter_username:   
